[package]
name = "justid"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "justid"
path = "src/main.rs"

[dependencies]
hyper = "1.5.1"
http = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bytesize = { version = "1.3.0", features = ["serde"] } 
x = { git = "https://github.com/Revanthshalon/x.git" }
